Fix for body height bug on mobile devices.(now properly)

--- a/main.css
+++ b/main.css
@@ -379,7 +379,7 @@ hr {
   }
 
   body {
-    height: auto;
+    max-height: 100vh;
   }
 
   html {
